# SimpleAzureJobRunner

./: LICENSE  README.md  pyproject.toml
simple_azure_job_runner/deploy/utils/: az_cmd.py  azure_vms.py  install_extensions.py  ioutils.py  logger.py  remove_orphaned_accounts.py
simple_azure_job_runner/deploy/windows/: __init__.py
